Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
     <meta name="description" content="Page Description"> <!-- TODO: update meta description -->
     <meta property="og:title" content="Home - Page"> <!-- TODO: update og:title -->
-    <meta property="og:url" content="https://www.example.com/page"> <!-- TODO: update og:url -->
+    <meta property="og:url" content="https://code-client.vercel.app/"> <!-- TODO: update og:url -->
     <meta property="og:description" content="Page pour afficher un code client"> <!-- TODO: update og:description -->
-    <meta property="og:image" content="/python.jpg"> <!-- TODO: og:image -->
+    <meta property="og:image" content="https://code-client.vercel.app/python.jpg"> <!-- TODO: og:image -->
     <meta property="og:image:alt" content="Page pour afficher un code client"> <!-- TODO: update og:image:alt -->
     <meta property="og:type" content="website">
-    <meta name="twitter:card" content="python.jpg"> <!-- TODO: update twitter:cared -->
-    <link rel="canonical" href="https://www.example.com/page"> <!-- TODO: update canonical link -->
+    <meta name="twitter:card" content="https://code-client.vercel.app/python.jpg"> <!-- TODO: update twitter:cared -->
+    <link rel="canonical" href="https://code-client.vercel.app/"> <!-- TODO: update canonical link -->
     <link rel="icon" href="python.png">
     <link rel="icon" href="/python.png" type="image/png">
     <link rel="apple-touch-icon" href="/python.png">
