Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <meta property="og:url" content="https://code-client.vercel.app/"> <!-- TODO: update og:url -->
     <meta property="og:description" content="Page pour afficher un code client"> <!-- TODO: update og:description -->
     <meta property="og:image" content="https://code-client.vercel.app/python.jpg"> <!-- TODO: og:image -->
+    <meta property="og:image" content="/python.jpg"> <!-- TODO: og:image -->
     <meta property="og:image:alt" content="Page pour afficher un code client"> <!-- TODO: update og:image:alt -->
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="https://code-client.vercel.app/python.jpg"> <!-- TODO: update twitter:cared -->
+    <meta name="twitter:card" content="/python.jpg"> <!-- TODO: update twitter:cared -->
     <link rel="canonical" href="https://code-client.vercel.app/"> <!-- TODO: update canonical link -->
     <link rel="icon" href="python.png">
     <link rel="icon" href="/python.png" type="image/png">
