Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width">
     <title>Code client</title> <!-- TODO: update page title -->
 
-    <meta name="description" content="Page Description"> <!-- TODO: update meta description -->
-    <meta property="og:title" content="Home - Page"> <!-- TODO: update og:title -->
+    <meta name="description" content="Page pour afficher un code client"> <!-- TODO: update meta description -->
+    <meta property="og:title" content="Code client"> <!-- TODO: update og:title -->
     <meta property="og:url" content="https://code-client.vercel.app/"> <!-- TODO: update og:url -->
     <meta property="og:description" content="Page pour afficher un code client"> <!-- TODO: update og:description -->
     <meta property="og:image" content="https://code-client.vercel.app/python.jpg"> <!-- TODO: og:image -->
