Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <main class="min-h-svh w-full grid grid-cols-1 place-content-center bg-[#002450] px-3">
+    <main class="min-h-svh w-full grid grid-cols-1 place-content-center bg-[#002450] px-3 bg-url[('/python.jpg')] bg-center bg-no-repeat bg-cover">
         <section
             class="shadow-lg max-w-xl ww-max mx-auto flex flex-col gap-8 lg:px-10 px-4 py-7 bg-white rounded-md drop-shadow-xl">
             <h1 class="text-3xl font-bold text-center">Enregistrement client</h1>
